# cccmk

./: .gitignore  README.md  TODO.md  VERSION  install.sh
.githooks/: auto-version.awk  commit-msg  pre-commit
project/: .gitignore
project/.githooks/_if_ask_autoversion/: pre-commit
project/.githooks/_if_ask_commitlinter/: commit-msg
project/_if_ask_mkfile/: Makefile
project/_if_ask_mkfile/mkfile/_if_ask_testsuite/config/: build-tests.mk
project/_if_ask_mkfile/mkfile/_if_ask_testsuite/rules/: build-tests.mk  lists-tests.mk  test.mk
project/_if_ask_mkfile/mkfile/config/: build.mk  modes.mk
project/_if_ask_mkfile/mkfile/lists/_untracked/: packages.txt
project/_if_ask_mkfile/mkfile/rules/: all.mk  build.mk  clean.mk  dist.mk  init.mk  install.mk  lists.mk  prereq.mk  version.mk
project/_if_ask_mkfile/mkfile/rules/_if_multiselect/: debugging.mk  doc.mk
project/_if_ask_mkfile/mkfile/rules/_if_type_library/: build.mk
project/_if_ask_mkfile/mkfile/rules/_if_type_program/: build.mk  install.mk
project/_if_ask_mkfile/mkfile/utils/: prereq.mk  shell.mk
project/_if_lang_c/: .cccmk
project/_if_lang_cs/: .cccmk
project/_if_lang_js-jsx-ts-tsx/: .cccmk  package.json
project/_if_lang_js-jsx-ts-tsx/_if_ask_eslint/: .cccmk  .eslintrc.json
project/_if_lang_py/: .cccmk  setup.py
project/_if_lang_rs/: .cccmk  Cargo.toml
scripts/: cccmk.sh  cccmk_create.sh  cccmk_diff.sh  cccmk_track.awk  cccmk_update.sh  diff.awk  prompt.bash  template-functions.awk  template.awk  util.awk  util.sh  utils.sh
(+4 files in other folders)
